try to fix alignment of logo

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ html {
     transition: .5s all ease;
     margin-left: 30px;
     display: flex;
+    align-items:center;
 }
 
 .fa-atlas {
@@ -397,12 +398,11 @@ html {
         text-shadow: none;
     }
     .logo{
-        line-height:200%;
+        line-height:100%;
     }
     
     .fa-atlas{
-        line-height:190%;
-        align-self:stretch;
+        line-height:100%;
     }
     
     .form-button{
